--- a/config/sample_configs/config.sample.gauss.json
+++ b/config/sample_configs/config.sample.gauss.json
@@ -1,6 +1,5 @@
 {
     "benchmark_setup": {
-        "output_dir": "files",
         "data": [
             {
                 "graph_id": "notears",
@@ -89,7 +88,7 @@
                     "radii": 80,
                     "N": 50,
                     "M": 10,
-                    "pseudo_obs": 1.0,
+                    "pseudo_obs": 10.0,
                     "threshold": [
                         0.7,
                         0.6
@@ -115,12 +114,11 @@
                     "solvermethod": "winasobs",
                     "indeg": 80,
                     "time": [
-                        20,
                         60
                     ],
                     "allocated": 80,
                     "scorefunction": "bdeu",
-                    "alpha": 1,
+                    "alpha": [1, 10, 50, 100],
                     "cores": 1,
                     "verbose": 0
                 },
@@ -130,12 +128,11 @@
                     "solvermethod": "asobs",
                     "indeg": 80,
                     "time": [
-                        20,
                         60
                     ],
                     "allocated": 80,
                     "scorefunction": "bdeu",
-                    "alpha": 1,
+                    "alpha": [1, 10, 50, 100],
                     "cores": 1,
                     "verbose": 0
                 }
@@ -155,7 +152,7 @@
                     "id": "gobnilp",
                     "plot": false,
                     "palim": 2,
-                    "alpha": 1,
+                    "alpha": [1, 10, 50, 100],
                     "prune": true
                 }
             ],
@@ -172,7 +169,9 @@
                     "id": "fges",
                     "faithfulnessAssumed": true,
                     "score": "bdeu-score",
-                    "datatype": "discrete"
+                    "datatype": "discrete",
+                    "samplePrior": [1, 10, 50, 100],
+                    "structurePrior": 1
                 }
             ],
             "fci": [
@@ -203,7 +202,8 @@
                     ],
                     "score": "bdeu-score",
                     "test": "chi-square-test",
-                    "datatype": "discrete"
+                    "datatype": "discrete",
+                    "structurePrior": 1
                 }
             ],
             "rfci": [
@@ -230,42 +230,44 @@
                         0.1,
                         0.2,
                         0.35,
-                        0.45
-                    ]
+                        0.45,
+                        0.5
+                    ],
+                    "NAdelete": true, 
+                    "mmax": "Inf",
+                    "u2pd": "relaxed",
+                    "skelmethod": "stable",
+                    "conservative": false,
+                    "majrule": false, 
+                    "solveconfl": false,
+                    "numCores": 1, 
+                    "verbose": false
                 },
                 {
                     "id": "pcalg005",
-                    "alpha": 0.05
+                    "alpha": 0.05,
+                    "NAdelete": true, 
+                    "mmax": "Inf",
+                    "u2pd": "relaxed",
+                    "skelmethod": "stable",
+                    "conservative": false,
+                    "majrule": false, 
+                    "solveconfl": false,
+                    "numCores": 1, 
+                    "verbose": false
                 }
             ],
             "mmhc": [
                 {
                     "id": "mmhc",
-                    "restrict.args": {
-                        "alpha": [
-                            0.01,
-                            0.05,
-                            0.1,
-                            0.2,
-                            0.35,
-                            0.45
-                        ]
-                    }
-                }
-            ],
-            "h2pc": [
-                {
-                    "id": "h2pc",
-                    "restrict.args": {
-                        "alpha": [
-                            0.01,
-                            0.05,
-                            0.1,
-                            0.2,
-                            0.35,
-                            0.45
-                        ]
-                    }
+                    "alpha": [
+                        0.01,
+                        0.05,
+                        0.1,
+                        0.2,
+                        0.35,
+                        0.45
+                    ]
                 }
             ],
             "interiamb": [
@@ -298,7 +300,7 @@
                 {
                     "id": "tabu",
                     "score": "bde",
-                    "iss": 1,
+                    "iss": [1, 10, 50, 100],
                     "issmu": 1,
                     "l": 5,
                     "k": 1,
@@ -310,7 +312,7 @@
                 {
                     "id": "hc",
                     "score": "bde",
-                    "iss": 1,
+                    "iss": [1, 10, 50, 100],
                     "issmu": 1,
                     "l": 5,
                     "k": 1,
@@ -322,21 +324,25 @@
             ],
             "itsearch": [
                 {
-                    "id": "itsearch_map",
-                    "optional": {
-                        "MAP": true,
-                        "plus1it": null,
-                        "posterior": null,
-                        "scoretype": "bdecat",
-                        "chi": 0.5,
-                        "edgepf": 2,
-                        "am": null,
-                        "aw": null
-                    }
+                    "id": "itsearch_map",                    
+                    "MAP": true,
+                    "plus1it": null,
+                    "posterior": null,
+                    "scoretype": "bdecat",
+                    "chi": [1, 10, 50, 100],
+                    "edgepf": 2,
+                    "am": null,
+                    "aw": null,
+                    "softlimit":9,
+                    "hardlimit":12,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "mergetype":"skeleton"
                 },
                 {
                     "id": "itsearch_map_cont",
-                    "optional": {
+                    
                         "MAP": true,
                         "plus1it": null,
                         "posterior": null,
@@ -344,35 +350,130 @@
                         "chi": null,
                         "edgepf": null,
                         "am": 1,
-                        "aw": null
-                    }
+                        "aw": null,
+                    "softlimit":9,
+                    "hardlimit":12,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "mergetype":"skeleton"
+                    
                 },
                 {
                     "id": "itsearch_sample",
-                    "optional": {
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": [1, 10, 50, 100],
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null,
+                                            "softlimit":9,
+                    "hardlimit":12,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "mergetype":"skeleton"
+
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi1",
+                   
                         "MAP": false,
                         "plus1it": 6,
                         "posterior": 0.5,
                         "scoretype": "bdecat",
                         "chi": 1,
-                        "edgepf": 1,
+                        "edgepf": 2,
                         "am": null,
-                        "aw": null
-                    }
+                        "aw": null,
+                                            "softlimit":9,
+                    "hardlimit":12,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "mergetype":"skeleton"
+
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi10",
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": 10,
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null,
+                        "softlimit":9,
+                    "hardlimit":12,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "mergetype":"skeleton"
+
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi50",
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": 50,
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null,
+                        "softlimit":9,
+                    "hardlimit":12,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "mergetype":"skeleton"
+
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi100",
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": 100,
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null,
+                        "softlimit":9,
+                    "hardlimit":12,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "mergetype":"skeleton"
                 }
             ],
             "order_mcmc": [
                 {
                     "id": "order_mcmc_itmap",
-                    "startspace": "itsearch_map",
-                    "optional": {
-                        "plus1": true
-                    },
+                    "startspace_algorithm": "itsearch_map",
+                    "plus1": true,
                     "scoretype": "bdecat",
-                    "chi": 1,
-                    "edgepf": 1,
+                    "chi": [1, 10, 50, 100],
+                    "edgepf": 2,
                     "aw": null,
                     "am": null,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "stepsave": null,
+                    "iterations":null,
+                    "MAP":true,
+                    "cpdag": false,
                     "threshold": [
                         0.99,
                         0.95,
@@ -389,15 +490,19 @@
                 },
                 {
                     "id": "order_mcmc_itmap_cont",
-                    "startspace": "itsearch_map_cont",
-                    "optional": {
-                        "plus1": true
-                    },
+                    "startspace_algorithm": "itsearch_map_cont",
+                    "plus1": true,
                     "scoretype": "bge",
                     "chi": null,
                     "edgepf": null,
                     "aw": null,
                     "am": 1,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "stepsave": null,
+                    "iterations":null,
+                    "MAP":true,
+                    "cpdag": false,
                     "threshold": [
                         0.99,
                         0.95,
@@ -414,17 +519,137 @@
                 },
                 {
                     "id": "order_mcmc_itsample",
-                    "startspace": "itsearch_sample",
-                    "optional": {
-                        "plus1": true
-                    },
+                    "startspace_algorithm": "itsearch_sample",
+                    "plus1": true,
                     "scoretype": "bdecat",
-                    "chi": 1,
-                    "edgepf": 1,
+                    "chi": [1, 10, 50, 100],
+                    "edgepf": 2,
                     "aw": null,
                     "am": null,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "stepsave": null,
+                    "iterations":null,
+                    "MAP":true,
                     "threshold": [
-                        0.99,
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi1",
+                    "startspace_algorithm": "itsearch_sample_chi1",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 1,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "stepsave": null,
+                    "iterations":null,
+                    "MAP":true,
+                    "threshold": [
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi10",
+                    "startspace_algorithm": "itsearch_sample_chi10",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 10,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "stepsave": null,
+                    "iterations":null,
+                    "MAP":true,
+                    "threshold": [
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi50",
+                    "startspace_algorithm": "itsearch_sample_chi50",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 50,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "stepsave": null,
+                    "iterations":null,
+                    "MAP":true,
+                    "threshold": [
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi100",
+                    "startspace_algorithm": "itsearch_sample_chi100",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 100,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "alpha": 0.05,
+                    "gamma": 1,
+                    "cpdag": false,
+                    "stepsave": null,
+                    "iterations":null,
+                    "MAP":true,
+                    "threshold": [
+                         0.99,
                         0.95,
                         0.9,
                         0.8,
@@ -437,6 +662,7 @@
                     ],
                     "burnin": 0
                 }
+
             ]
         }
     }
